# test-optim

./: CMakeLists.txt  Makefile  README.md  README.org  README.txt  install.sh  matrix.cpp  matrix.h  optim.cpp  optim.h  test_optim.cpp
examples/: Makefile  ex_template.cpp  ex_template.h  template  test_template.cpp
include/: matrix.h  optim.h
old/: test_optim.cpp
src/: CMakeLists.txt  matrix.cpp  optim.cpp  optim_impl_arma.cpp  optim_impl_eigen.cpp  optim_impl_vector.cpp
test/: CMakeLists.txt  test_functions.h  test_matrix.cpp  test_optim.cpp
